<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/fragment_step_detail_player_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resize_mode="fixed_width" />

            <ImageView
                android:id="@+id/fragment_step_detail_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_list_margin"
                android:layout_marginLeft="@dimen/item_list_margin"
                android:layout_marginRight="@dimen/item_list_margin"
                android:layout_marginStart="@dimen/item_list_margin"
                android:layout_marginTop="@dimen/item_list_margin"
                android:contentDescription="@string/step_detail_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_step_detail_player_view" />

            <TextView
                android:id="@+id/fragment_step_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/item_list_margin"
                android:layout_marginLeft="@dimen/item_list_margin"
                android:layout_marginRight="@dimen/item_list_margin"
                android:layout_marginStart="@dimen/item_list_margin"
                android:layout_marginTop="@dimen/item_list_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_step_detail_iv"
                tools:text="@string/step_title" />

            <TextView
                android:id="@+id/fragment_step_detail_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_list_margin"
                android:layout_marginEnd="@dimen/item_list_margin"
                android:layout_marginLeft="@dimen/item_list_margin"
                android:layout_marginRight="@dimen/item_list_margin"
                android:layout_marginStart="@dimen/item_list_margin"
                android:layout_marginTop="@dimen/item_list_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_step_detail_title"
                tools:text="@string/step_decription" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>