<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/ingredient_tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_list_margin"
            android:layout_marginLeft="@dimen/item_list_margin"
            android:layout_marginRight="@dimen/item_list_margin"
            android:layout_marginTop="@dimen/item_list_margin"
            app:layout_constraintBottom_toTopOf="@+id/ingredient_divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/ingredient_quantity" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/ingredient_tv_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_list_margin"
            android:layout_marginLeft="@dimen/item_list_margin"
            android:layout_marginRight="@dimen/item_list_margin"
            android:layout_marginTop="@dimen/item_list_margin"
            app:layout_constraintBottom_toTopOf="@+id/ingredient_divider"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/ingredient_measure" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/ingredient_tv_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_list_margin"
            android:layout_marginLeft="@dimen/item_list_margin"
            android:layout_marginRight="@dimen/item_list_margin"
            android:layout_marginTop="@dimen/item_list_margin"
            android:text="@string/ingredient_ingredient"
            app:layout_constraintBottom_toTopOf="@+id/ingredient_divider"
            app:layout_constraintLeft_toLeftOf="@+id/guideline3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ingredient_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/item_list_margin"
            android:layout_marginLeft="@dimen/item_list_margin"
            android:layout_marginRight="@dimen/item_list_margin"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </android.support.constraint.ConstraintLayout>

</layout>